<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>otonom_surus</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="eren@todo.todo">eren</maintainer>
  <license>TODO: License declaration</license>

<!-- ROS 2 Dependencies -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>ament_cmake</depend>
  <depend>launch_ros</depend>

  <!-- System Dependencies -->
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>mediapipe</exec_depend>
  <exec_depend>numpy</exec_depend> <!-- Mediapipe genellikle numpy kullanır -->
  <exec_depend>setuptools</exec_depend>
  <exec_depend>launch</exec_depend>


  <!-- Test Dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
